--- a/00_calculator/package.json
+++ b/00_calculator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "00_calculator",
-  "types": "module",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
