--- a/00_calculator/package.json
+++ b/00_calculator/package.json
@@ -1,10 +1,12 @@
 {
   "name": "00_calculator_huzaifa_k",
   "type": "module",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
-  "bin": "./app.mjs",
+  "bin": {
+    "00_calculator_huzaifa_k": "bin/app.mjs"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
