--- a/00_calculator/package.json
+++ b/00_calculator/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "calculator_huzaifa_k",
+  "name": "00calculator_huzaifa",
   "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "bin": {
-    "calculator_huzaifa_k": "bin/app.mjs"
+    "calculator_huzaifa_k": "bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
