--- a/00_calculator/package.json
+++ b/00_calculator/package.json
@@ -1,10 +1,10 @@
 {
   "name": "00calculator-huzaifa",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "bin": "./index.js",
+  "bin": "./app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
