--- a/01 Number Guessing Game/package.json
+++ b/01 Number Guessing Game/package.json
@@ -1,6 +1,7 @@
 {
   "name": "01-number-guessing-game",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
