--- a/01 Number Guessing Game/package.json
+++ b/01 Number Guessing Game/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "01-number-guessing-game",
-  "version": "1.0.0",
+  "name": "01number-guessing-game-huzaifa",
+  "version": "1.1.0",
   "type": "module",
   "description": "",
   "main": "index.js",
+  "bin": "./app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
