--- a/04 Currency Converter/package.json
+++ b/04 Currency Converter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-currency-converter",
+  "name": "04-currency-converter-huzaifak",
   "version": "1.0.0",
   "type": "module",
   "description": "",
