--- a/05 Word Counter/package.json
+++ b/05 Word Counter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05-word-counter",
+  "name": "05-word-counter-huzaifak",
   "version": "1.0.0",
   "type": "module",
   "description": "",
