--- a/08 Quiz/package.json
+++ b/08 Quiz/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "08-quiz",
-  "version": "1.0.0",
+  "name": "08-quiz-huzaifak",
+  "version": "1.1.0",
   "type": "module",
   "description": "",
   "main": "index.js",
