--- a/09 Countdown Timer/package.json
+++ b/09 Countdown Timer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "09-countdown-timer",
+  "name": "09-countdown-timer-huzaifak",
   "version": "1.0.0",
   "type": "module",
   "description": "",
