--- a/09 Countdown Timer/package.json
+++ b/09 Countdown Timer/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "09-countdown-timer-huzaifak",
-  "version": "1.0.0",
+  "name": "09-countdown-timer-huzaifaak",
+  "version": "1.1.0",
   "type": "module",
   "description": "",
   "main": "index.js",
-  "bin": "./app/js",
+  "bin": "./app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
