--- a/10 Oop/package.json
+++ b/10 Oop/package.json
@@ -4,10 +4,17 @@
   "type": "module",
   "description": "",
   "main": "index.js",
-  "bin": "./app.js",
+  "bin": "./person.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^9.1.4"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^9.0.3",
+    "@types/node": "^18.11.18"
+  }
 }
