--- a/11 Oop My Bank/package.json
+++ b/11 Oop My Bank/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "11-oop-my-bank",
+  "name": "11-oop-my-bank-huzaifak",
   "version": "1.0.0",
   "type": "module",
   "bin": "./app.js",
